// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sc-bxivhb gIwMIC"
  >
    <div>
      <div
        className="sc-htpNat fiuTRh"
      />
      
    </div>
  </div>
</span>
`;

exports[`When using snapshots with a label prop Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sc-bxivhb gIwMIC"
  >
    <div>
      <div
        className="sc-htpNat fiuTRh"
      />
      <div
        className="sc-ifAKCX dKVvJV"
      >
        This is a label
      </div>
    </div>
  </div>
</span>
`;
